--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     networks:
       - atlassian-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U atlassian"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     restart: unless-stopped
 
   jira:
@@ -48,7 +53,8 @@ services:
       dockerfile: Dockerfile
     container_name: confluence
     depends_on:
-      - database
+      database:
+        condition: service_healthy
     environment:
       ATL_PROXY_NAME: localhost
       ATL_PROXY_PORT: 8090
